--- a/pom.xml
+++ b/pom.xml
@@ -27,12 +27,23 @@
       <artifactId>allure-testng</artifactId>
       <version>${allure.version}</version>
       <scope>test</scope>
-    </dependency><dependency>
+    </dependency>
+      <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>7.8.0</version>
       <scope>test</scope>
-    </dependency><dependency>
+    </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-excelant -->
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-excelant</artifactId>
+          <version>5.2.4</version>
+      </dependency>
+
+
+      <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.7</version>
